--- a/site/css/app.css
+++ b/site/css/app.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     overflow: hidden;
     height: 100%;
-    background-color: #E9E0C3;
+    /*background-color: #E9E0C3;*/
 }
 
 canvas {
