bug: cannot select text under other text

--- a/site/css/app.css
+++ b/site/css/app.css
@@ -82,6 +82,8 @@ canvas[resize] {
 
 #editorOverlay  {
   position: absolute;
+  top: 5px;
+  right: 5px;
   opacity: 0.9;
   background-color: #eeeeee;
   padding: 1px;
