--- a/site/css/app.css
+++ b/site/css/app.css
@@ -64,13 +64,30 @@ ul.dropdown-menu > li {
     margin-right: 10px;
 }
 
-#designer > #rightSide {
+#rightSide {
     float: right;
-    margin: 6px;
+    margin: 3px;
+}
+
+#rightSide > div {
+    display: inline-block;
+    margin: 0px 8px;
 }
 
 #designer #user-message {
     color: lightgray;
+    vertical-align: top;
+    margin-top: 8px;
+}
+
+#designer .glyphicon {
+    color: white;
+    font-size: 30px;
+}
+
+.icon-text {
+    font-size: 18pt;
+    font-weight: bold;
 }
 
 /* Scale canvas with resize attribute to full size */
@@ -103,6 +120,21 @@ canvas[resize] {
     resize: none;
     width: 200px;
     height: 100%;
+}
+
+#help-dialog {
+  position: absolute;
+  top: 182px;
+  width: 250px;
+  right: 5px;
+  opacity: 0.9;
+  background-color: #eeeeee;
+  padding: 6px;
+  border: 1px solid gray;
+}
+
+#help-dialog h3 {
+    margin-top: 4px;
 }
 
 .text-block-editor {
