--- a/site/css/app.css
+++ b/site/css/app.css
@@ -14,6 +14,10 @@ body {
     font-size: 14px;
 }
 
+.right {
+    float: right;
+}
+
 
 /* Bootstrap customizations */
 
@@ -180,3 +184,5 @@ canvas[resize] {
 .font-picker .Select-control {
     height: 60px;
 }
+
+
