--- a/site/css/builder.css
+++ b/site/css/builder.css
@@ -11,5 +11,8 @@ ul.chooser img {
 }
 
 ul.chooser img:hover {
-  border-color: lightblue;
+}
+
+ul.chooser .chosen {
+    border-color: darkred;
 }
