user can enter builder text

--- a/site/css/builder.css
+++ b/site/css/builder.css
@@ -25,3 +25,8 @@ ul.chooser img {
 .chooser .chosen {
     border-color: darkred;
 }
+
+#templateControls input {
+    width: 300px;
+    margin: 10px;
+}
