--- a/site/css/builder.css
+++ b/site/css/builder.css
@@ -18,8 +18,10 @@
 }
 
 #previewCanvas {
-    max-height: 800px;
-    max-width: 800px;
+    width: 100%;
+    height: 80%;
+    max-height: 1000px;
+    max-width: 1000px;
 }
 
 #templateControls input,
