--- a/site/css/app.css
+++ b/site/css/app.css
@@ -14,10 +14,20 @@ body {
     font-size: 14px;
 }
 
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+    width: 100%;
+    height: 100%;
+}
+
 .right {
     float: right;
 }
 
+.fill {
+    width: 100%;
+    height: 100%;
+}
 
 /* Bootstrap customizations */
 
@@ -105,14 +115,20 @@ ul.dropdown-menu > li {
     font-weight: bold;
 }
 
-/* Scale canvas with resize attribute to full size */
-canvas[resize] {
+.fill {
     width: 100%;
     height: 100%;
 }
 
 #canvasContainer > canvas {
     background-color: white;
+    z-index: 20;    
+    opacity: 0.985;
+}
+
+#canvas-watermark {
+    position:absolute;
+    padding: 10%;
 }
 
 #canvasContainer {
