--- a/site/css/builder.css
+++ b/site/css/builder.css
@@ -4,6 +4,22 @@
     height: 100%;
 }
 
+.navbar {
+    background: #333333;
+    color: white;
+    margin-bottom: 0;
+}
+
+.navbar .logo {
+    height: 50px;
+    margin: 8px;
+}
+
+.navbar h2 {
+    font-size: 16px;
+    color: lightgray;
+}
+
 #templateControls {
     flex: 1;
     min-width: 200px;
