--- a/site/css/index.css
+++ b/site/css/index.css
@@ -29,10 +29,13 @@ h1 {
 }
 
 footer {
-    margin-top: 40px;
+    margin-top: 10px;
     color: #888888;
 }
 
+.hero-row h1 {
+    margin-top: 30px;
+}
 
 .hero-row h3 {
     color: #666666;
@@ -60,7 +63,7 @@ img.hero {
 }
 
 .products {
-    background-color: #7b839d;
+    background-color: #989fb3;
     padding: 40px 0;
 }
 
