--- a/site/css/builder.css
+++ b/site/css/builder.css
@@ -23,7 +23,8 @@
 #templateControls {
     flex: 1;
     min-width: 200px;
-    margin: 10px;
+    padding: 10px;
+    padding-bottom: 70px;
     overflow-y: scroll;
     font-size: 16px;
 }
